package actions;

// Возможные действия игрока над ячейкой.
public enum CellAction {
    OPEN,
    TOGGLE_FLAG
}
