package cells;

// Состояния, в которых может находиться ячейка на поле.
public enum CellState {
    CLOSED,
    OPENED,
    FLAGGED
}
