package game;

// Глобальное состояние партии.
public enum GameState {
    IN_PROGRESS,
    WON,
    LOST
}
